fix vertical line overflowing body part 2, and add link to porto

--- a/style.css
+++ b/style.css
@@ -153,6 +153,22 @@ header,section,footer,nav{
 .navlink-li{
     margin-left: 15px;
     margin-right: 15px;
+    position: relative;
+}
+
+.navlink-li::after{
+    width: 0;
+    height: 1px;
+    background-color: var(--primary-light-color);
+    position: absolute;
+    bottom: -5px;
+    left: 0;
+    content: '';
+    transition: width 0.2s ease-in-out;
+}
+
+.navlink-li:hover::after{
+    width: 100%;
 }
 
 header a{
